Sat Feb 29 00:37:24 1992  Per Cederqvist  (ceder@lysator)

	* swedish-strings.el (lyskom-mode-map): Bound
	  kom-private-answer-previous to "P".

	* commands1.el (kom-private-answer-previous): New command.

Sat Jan 25 00:47:53 1992  Linus Tolke Y  (linus at ruben)

	* swedish-strings.el (kom-page-next-command): Nu {ven bunden till
	  "j".

	* commands1.el (lyskom-change-name): A quit in the reading of the
	  name to change to will now give a new prompt.

Fri Jan 24 22:14:20 1992  Linus Tolke Y  (linus at ruben)

	* async.el (lyskom-handle-as-personal-message): New function.
	  (lyskom-show-personal-message, lyskom-insert-personal-message):
	  now uses the lyskom-handle-as-personal-message.

	  commands2.el (lyskom-send-message, lyskom-send-message-2): Now
	  prints the personal messages locally usin the
	  lyskom-handle-as-personal-message function.

	* commands2.el, swedish-strings.el (lyskom-send-message,
	  lyskom-send-message-2): Nu f}r man ett meddelande i bufferten
	  som inneh}ller vad man s{nde och till vem.

	* commands1.el (kom-unset-conf-motd, lyskom-unset-conf-motd)
	  swedish-strings.el: Default for remove note on the door is
	  yourself.

Wed Jan 22 00:22:02 1992  Inge Wallin  (inge at lysator)

	* clienttypes.el (read-list-enter-read-info): Rewritten it into an
	  iterative function instead of a recursive one.

Mon Jan 13 21:35:29 1992  Per Cederqvist  (ceder at robin)

	* commands1.el (lyskom-comment-recipients): Catch quits via a
	  condition-case.

Sun Jan 12 06:00:17 1992  Inge Wallin  (inge at lysator)

	* lyskom-rest.el(lyskom-filter),
	  startup.el(lyskom-connect-filter): Stoppat in (sit-for 0) som
	  Klaus Zeuge har f|reslagit f|r att inte klienten skall sv{lta ut
	  andra emacsprocesser.

Mon Jan  6 19:46:50 1992  Linus Tolke Y  (linus at lysator)

	* swedish-strings.el, english-strings.el, commands1.el
	  (go-to-conf): Fixat s} att namnen {r unika.

Wed Dec 18 04:33:02 1991  Linus Tolke Y  (linus at robert)
